--- a/gb/20/2/7/n11852131.md
+++ b/gb/20/2/7/n11852131.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/voebtn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/voebtn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/voebtn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/voebtn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/voebtn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>北加州中文学校联合会硅谷海报展    青少年展现创作力</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/07a439d674dbf06d44666554d216bc3f-600x400.jpg" />
 <h6>圣塔克拉拉县（Santa Clara County）和台湾新竹县姐妹县，联合举办的“2020新年海报展”，展出的时间为2月4日至2月14日。多位民选官员和侨领出席开幕式。（李沁一／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年02月07日讯】（大纪元记者李沁一圣荷西报导）2月5日（周三）下午，圣塔克拉拉县（Santa Clara County）和台湾新竹县姐妹县，联合举办的“2020新年<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E6%B5%B7%E6%8A%A5%E5%B1%95.md#1">海报展</a>”开幕式，在<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">硅谷</a>圣塔克拉拉县政府大厅举行。这些参展海报，均由<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E5%8C%97%E5%8A%A0%E5%B7%9E.md#1">北加州</a>中文学校联合会的学生们设计、创作，妙笔生花，栩栩如生。</p>
-<p>多位民选官员和侨领出席开幕式，圣塔克拉拉县前议长、县议员柯戴维（Dave Cortese），圣塔克拉拉县战略和政府事务办公室主任Steve Preminger，圣塔克拉拉县通讯和公共事务办公室主任Maria Leticia Gomez，美国<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">硅谷</a>协会会长玛丽莲?里布思（Marilyn Librers），驻旧金山台北经济文化办事处处长马钟麟，旧金山南湾侨教中心主任阎树荣，圣塔克拉拉县和新竹县姐妹县专员李汉文，<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E5%8C%97%E5%8A%A0%E5%B7%9E.md#1">北加州</a>中文学校联合会会长苏淑蓉、副会长陈亳蕙，北加州南湾台湾同乡会会长王淑梅等。</p>
+<p>【大纪元2020年02月07日讯】（大纪元记者李沁一圣荷西报导）2月5日（周三）下午，圣塔克拉拉县（Santa Clara County）和台湾新竹县姐妹县，联合举办的“2020新年<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B5%B7%E6%8A%A5%E5%B1%95.md#1">海报展</a>”开幕式，在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">硅谷</a>圣塔克拉拉县政府大厅举行。这些参展海报，均由<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8C%97%E5%8A%A0%E5%B7%9E.md#1">北加州</a>中文学校联合会的学生们设计、创作，妙笔生花，栩栩如生。</p>
+<p>多位民选官员和侨领出席开幕式，圣塔克拉拉县前议长、县议员柯戴维（Dave Cortese），圣塔克拉拉县战略和政府事务办公室主任Steve Preminger，圣塔克拉拉县通讯和公共事务办公室主任Maria Leticia Gomez，美国<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">硅谷</a>协会会长玛丽莲?里布思（Marilyn Librers），驻旧金山台北经济文化办事处处长马钟麟，旧金山南湾侨教中心主任阎树荣，圣塔克拉拉县和新竹县姐妹县专员李汉文，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8C%97%E5%8A%A0%E5%B7%9E.md#1">北加州</a>中文学校联合会会长苏淑蓉、副会长陈亳蕙，北加州南湾台湾同乡会会长王淑梅等。</p>
 <p>民选官员们非常高兴出席这样的开幕式，他们首先表达了诚挚的金鼠新年祝福，他们认为，代表未来和希望的青少年学生，创作的作品承载了华人文化，体现出浓厚的过年气息。通过画画的方式生动地表达出，西方人不是很明白的一些东方文化，推动了美国西人对台湾的了解。</p>
 <p>马钟麟看完海报画展表示：“学生们很有创作力，对华人文化和文字的运用能力很强，远超出我的想像。这样的活动举办多年，敦促了海外华人下一代主动学习和运用中文。”</p>
-<p>李汉文说：“圣塔克拉拉县和台湾新竹县姐妹县，每年都举办<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E6%B5%B7%E6%8A%A5%E5%B1%95.md#1">海报展</a>，得到<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E5%8C%97%E5%8A%A0%E5%B7%9E%E4%B8%AD%E6%96%87%E5%AD%A6%E6%A0%A1%E8%81%94%E5%90%88%E4%BC%9A.md#1">北加州中文学校联合会</a>的大力支持，使台湾在美国主流社会，又多了一个曝光的概率，非常有意义。从姐妹县的城市做起，希望更多的美国主流认识台湾。”</p>
+<p>李汉文说：“圣塔克拉拉县和台湾新竹县姐妹县，每年都举办<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B5%B7%E6%8A%A5%E5%B1%95.md#1">海报展</a>，得到<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8C%97%E5%8A%A0%E5%B7%9E%E4%B8%AD%E6%96%87%E5%AD%A6%E6%A0%A1%E8%81%94%E5%90%88%E4%BC%9A.md#1">北加州中文学校联合会</a>的大力支持，使台湾在美国主流社会，又多了一个曝光的概率，非常有意义。从姐妹县的城市做起，希望更多的美国主流认识台湾。”</p>
 <p>苏淑蓉说：“我们按照不同年级评选海报，老师们打分的依据，是否原创，是否手写文字，海报的美感和排版等。感谢有这样的合作机会，如果未来时机允许，希望有更多的图书馆展出，让更多的人看到。”</p>
-<p>阎树荣感叹：“侨社和县政府每年都有很多合作，双十国庆升旗、新年海报展、台湾关系法40周年展览等。<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E5%8C%97%E5%8A%A0%E5%B7%9E%E4%B8%AD%E6%96%87%E5%AD%A6%E6%A0%A1%E8%81%94%E5%90%88%E4%BC%9A.md#1">北加州中文学校联合会</a>，以多种方式推广华人文化，增加了美国青年了解华人文化的渠道。侨教中心和联合会一直合作，创办有意义的活动。”</p>
+<p>阎树荣感叹：“侨社和县政府每年都有很多合作，双十国庆升旗、新年海报展、台湾关系法40周年展览等。<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8C%97%E5%8A%A0%E5%B7%9E%E4%B8%AD%E6%96%87%E5%AD%A6%E6%A0%A1%E8%81%94%E5%90%88%E4%BC%9A.md#1">北加州中文学校联合会</a>，以多种方式推广华人文化，增加了美国青年了解华人文化的渠道。侨教中心和联合会一直合作，创办有意义的活动。”</p>
 <p>获得中级组第二名的张琦琪（Joyce Cheung），描述画作说：“我是在一个报刊里找到了灵感，改写了一副对联，‘鼠鼠生威除旧岁，琪龙腾飞贺新年’。这里的‘琪’是我的名字，表示美玉。画里有象征旧金山湾区的金门大桥，还有加州的州花。”</p>
 <p>七岁半的张纬琪（Jonathan Cheung）说：“ 这是我第一次参加海报比赛，我喜欢姐姐的属相鼠，我的画里有可爱的金鼠，还有舞龙和竹子，都是我喜欢的事物。”</p>
 <figure id="attachment_11933326" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/haobao2.jpg"><img src="https://i.epochtimes.com/assets/uploads/2020/02/haobao2-600x400.jpg" alt="" width="600" b="400" class="size-large wp-image-11933326" /></a><figcaption class="wp-caption-text">北加州中文学校联合会，传薪中文学校的方佳玲（Athena Fang ）和妈妈（左）。设计的海报为“心有所鼠 新春大吉”，获得中学组第一名。（李沁一／大纪元）</figcaption></figure>
@@ -26,48 +26,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/20/1/2/n11762093.md#1">硅谷山景城   率先实施雇员人头税 年增约600万美元</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/20/1/14/n11793250.md#1">蓬佩奥：与中共做生意 硅谷科技公司要三思</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/20/1/18/n11803223.md#1">蓬佩奥对硅谷公司领袖讲话全文</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/20/1/25/n11821015.md#1">硅谷苗必达学区特别选举 两位学委候选人参加辩论会</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/20/1/28/n11827981.md#1">湾区易通“硅谷嘉英” 锻造领袖人才</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/20/1/31/n11836084.md#1">【快讯】旧金山南湾（硅谷）出现首个“中共肺炎”确诊病例</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/20/1/31/n11836093.md#1">美硅谷确诊首例中共肺炎 全美第七例</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/20/2/1/n11836768.md#1">硅谷确诊首例“中共肺炎”病患 经圣荷西国际机场入境</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/20/11/9/n12535132.md#1">双十国庆绘画比赛 上周六在线举行颁奖典礼</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/20/11/9/n12534942.md#1">民众加州首府沙加缅度集会 抗议选举舞弊</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/2/n11762093.md#1">硅谷山景城   率先实施雇员人头税 年增约600万美元</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/14/n11793250.md#1">蓬佩奥：与中共做生意 硅谷科技公司要三思</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/18/n11803223.md#1">蓬佩奥对硅谷公司领袖讲话全文</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/25/n11821015.md#1">硅谷苗必达学区特别选举 两位学委候选人参加辩论会</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/28/n11827981.md#1">湾区易通“硅谷嘉英” 锻造领袖人才</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/31/n11836084.md#1">【快讯】旧金山南湾（硅谷）出现首个“武汉肺炎”确诊病例</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/31/n11836093.md#1">美硅谷确诊首例武汉肺炎 全美第七例</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/1/n11836768.md#1">硅谷确诊首例“武汉肺炎”病患 经圣荷西国际机场入境</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945757.md#1">应对武汉肺炎疫情 旧金山要求民众待在家里</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11943588.md#1">神韵梅沙五场落幕 观众赞“舞蹈充满神性”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/22/n9758393.md#1" target="_blank">刘晓：中共吹捧的商鞅非良臣 创万世恶法</a></li><li><a href="https://github.com/voebtn370/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488843.md#1" target="_blank">34国法轮功学员欧洲集会游行 英议员声援</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11241913.md#1" target="_blank">【征文】袁斌：中共怎样用党文化取代传统文化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/1/n11491970.md#1" target="_blank">奥地利女子缘何修炼法轮功 答案让你意想不到</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/4/n12523568.md#1">被预言选中的人：川普和曹操</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/10/31/n12515858.md#1">预言试析：揭开魔鬼“666”真面目</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/9/30/n12442873.md#1">《圣经》与《推背图》预言的应验与变换7</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/9/30/n12442866.md#1">《圣经》与《推背图》预言的应验与变换6</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/8/n12533225.md#1">【十字路口】拜登胜选？五大风暴来袭</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/7/n12532767.md#1">【重播】拜登自行宣布当选 美多州集会抗议</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/8/n12534135.md#1">【大陆新闻解毒 】时事小品：党媒报导怎样出炉的</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/7/n12531603.md#1">摇摆州出现奇怪数据 吹哨人举报费城邮局</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12529890.md#1">【大选更新11.6】川普：拜登不应错误宣称胜选</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/7/n12532904.md#1">网路热传民间道人解密 美大选惊动天神助川普</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12529759.md#1">子瑜单脚维持坐姿获赞好厉害 TWICE再获冠军</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/5/n12528285.md#1">获前空姐分享贴心事 发哥下机前一句话超暖心</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/5/n12528061.md#1">与李晨分手一年半 范冰冰到佛寺跪地或求姻缘</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12529961.md#1">SUGA肩膀动手术需休养 暂缺席BTS《BE》宣传</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12529197.md#1">TWICE彩瑛与刺青师恋爱？ 公司：无官方立场</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12530332.md#1">茼蒿是抗病毒、减肥的良伴 营养师推荐2吃法</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/3/n12521072.md#1">浴室、厨房是霉菌最喜欢的地方 3妙方除霉</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12530506.md#1">勾芡食物要少吃 可让血糖飙高 留意5种台湾美食</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/8/n12533391.md#1">台18岁男子昏迷62天 听到“吃鸡排”醒了</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12529168.md#1">对比美国大选 美退役准将赞台湾开票透明</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/25/n12061249.md#1">川普和普京发表罕见联合声明</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/25/n12061172.md#1">朝鲜官媒闹乌龙 俄使馆给金正恩“送花圈”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/26/n12061998.md#1">染疫女陆客陷忧郁 出院时泪谢台湾医护暖心照顾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/26/n12061608.md#1">金正恩去向成谜 专列停在元山度假大院</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/26/n12062941.md#1">网曝习近平陕西之行 曾秘密去了祖坟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/24/n12059276.md#1">入戏太深忧心患绝症 郭富城忆亡母两度哽咽</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/26/n12062937.md#1">周星驰近况曝光 与林允隔空互动笑翻网络</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/26/n12061698.md#1">接受家乡名主播专访 吴凤曝台湾防疫成功关键</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/26/n12061797.md#1">女儿参演八点档戏剧 梁佑南教演秘书秘诀</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/24/n12059453.md#1">孙俪让丈夫教儿子数学 邓超自己做完还求表扬</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/1/n11993781.md#1">【命理】五年间大发大破 绞尽脑汁防劫不如天算</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/22/n12052766.md#1">姻缘天定 非人力所能阻隔</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/25/n12059633.md#1">衔玉而生 宝玉其人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/2/4/n4633423.md#1">一门才女进宫封学士  《女论语》十篇传后世</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/26/n12062205.md#1">国学大师章太炎入幽冥的奇特经历</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/voebtn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/voebtn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/7/n11852131.htm">北加州中文学校联合会硅谷海报展    青少年展现创作力</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/7/n11852131.htm">北加州中文学校联合会硅谷海报展    青少年展现创作力</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/voebtn370/djy/blob/master/gb/20/2/7/n11852131.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/voebtn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/voebtn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/voebtn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/2/7/n11852131.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
